openshift-ressources/policy-management-backend/svc-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-management-backend-queue
spec:
  ports:
  - name: "61613"
    port: 61613
    protocol: TCP
    targetPort: 61613
  - name: "61616"
    port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    app: policy-management-backend
  sessionAffinity: None
  type: ClusterIP
