openshift-ressources/policy-management-backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: policy-management-backend
  name: policy-management-backend
spec:
  ports:
  - name: 8090-tcp
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: policy-management-backend
    deploymentconfig: policy-management-backend
  sessionAffinity: None
  type: ClusterIP
