openshift-ressources/policy-management-backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: policy-management-backend
  name: policy-management-backend
spec:
  host: policy-management-backend-lakeside-mutual.apps.cluster-paris-3e9b.paris-3e9b.example.opentlc.com
  port:
    targetPort: 8090-tcp
  to:
    kind: Service
    name: policy-management-backend
    weight: 100
  wildcardPolicy: None
